Created using Popcode: https://popcode.org

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Oswald', sans-serif;
-    background-color: #17d3ff;
+    background-color: #87ae73;
     text-align: center;
 }
 
